# rsOCR

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: clipboard_test.rs
src/: cli.rs  config.rs  gui.rs  lib.rs  logger.rs  main.rs  models.rs  ocr_utils.rs
ui/: main.slint
